# Zygisk-Il2CppDumper

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  DIFF_WITH_DESKTOP.md  PLAN_SCRIPT_JSON.md  README.zh-CN.md
module/src/main/cpp/: CMakeLists.txt  il2cpp-class.h  il2cpp_dump.cpp  il2cpp_dump.h  il2cpp_h.cpp  il2cpp_h.h  script_json.cpp  script_json.h
tests/: CMakeLists.txt  test_escape_json.cpp  test_extract_strings.cpp  test_fix_name.cpp  test_il2cpp_h.cpp  test_json_output.cpp  test_metadata.cpp  test_runner.cpp  test_type_signature.cpp
tests/stubs/: il2cpp-api-functions.h  log.h  stub_globals.cpp  xdl.h
